atg/torch_wrapper_gen.odin

	atg__triton_multi_head_attention_out :: proc(out: ^Tensor, query: Tensor, key: Tensor, value: Tensor, embed_dim: i64, num_head: i64, qkv_weight: Tensor, qkv_bias: Tensor, proj_weight: Tensor, proj_bias: Tensor, mask: Tensor) ---
	atg__triton_scaled_dot_attention :: proc(out: ^Tensor, q: Tensor, k: Tensor, v: Tensor, dropout_p: f64) ---
	atg__triton_scaled_dot_attention_out :: proc(out: ^Tensor, q: Tensor, k: Tensor, v: Tensor, dropout_p: f64) ---
	atg__unique :: proc(out: ^Tensor, self: Tensor, sorted: c.int, return_inverse: c.int) ---
	atg__unique2 :: proc(out: ^Tensor, self: Tensor, sorted: c.int, return_inverse: c.int, return_counts: c.int) ---
	atg__unique2_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, out2: Tensor, self: Tensor, sorted: c.int, return_inverse: c.int, return_counts: c.int) ---
	atg__unique_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, self: Tensor, sorted: c.int, return_inverse: c.int) ---
	atg__unpack_dual :: proc(out: ^Tensor, dual: Tensor, level: i64) ---
	atg__unsafe_index :: proc(out: ^Tensor, self: Tensor, indices_data: ^Tensor, indices_len: c.int) ---
	atg__unsafe_index_put :: proc(out: ^Tensor, self: Tensor, indices_data: ^Tensor, indices_len: c.int, values: Tensor, accumulate: c.int) ---
	atg__unsafe_masked_index :: proc(out: ^Tensor, self: Tensor, mask: Tensor, indices_data: ^Tensor, indices_len: c.int, fill: Scalar) ---
	atg__unsafe_masked_index_put_accumulate :: proc(out: ^Tensor, self: Tensor, mask: Tensor, indices_data: ^Tensor, indices_len: c.int, values: Tensor) ---
	atg__unsafe_view :: proc(out: ^Tensor, self: Tensor, size_data: [^]i64, size_len: c.int) ---
	atg__unsafe_view_out :: proc(out: ^Tensor, self: Tensor, size_data: [^]i64, size_len: c.int) ---
	atg__upsample_bicubic2d_aa :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int, align_corners: c.int, scales_h_v: f64, scales_h_null: rawptr, scales_w_v: f64, scales_w_null: rawptr) ---
	atg__upsample_bicubic2d_aa_backward :: proc(out: ^Tensor, grad_output: Tensor, output_size_data: [^]i64, output_size_len: c.int, input_size_data: [^]i64, input_size_len: c.int, align_corners: c.int, scales_h_v: f64, scales_h_null: rawptr, scales_w_v: f64, scales_w_null: rawptr) ---
	atg__upsample_bicubic2d_aa_backward_grad_input :: proc(out: ^Tensor, grad_input: Tensor, grad_output: Tensor, output_size_data: [^]i64, output_size_len: c.int, input_size_data: [^]i64, input_size_len: c.int, align_corners: c.int, scales_h_v: f64, scales_h_null: rawptr, scales_w_v: f64, scales_w_null: rawptr) ---
	atg__upsample_bicubic2d_aa_out :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int, align_corners: c.int, scales_h_v: f64, scales_h_null: rawptr, scales_w_v: f64, scales_w_null: rawptr) ---
	atg__upsample_bicubic2d_aa_vec :: proc(out: ^Tensor, input: Tensor, output_size_data: [^]i64, output_size_len: c.int, align_corners: c.int, scale_factors_data: [^]f64, scale_factors_len: c.int) ---
	atg__upsample_bilinear2d_aa :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int, align_corners: c.int, scales_h_v: f64, scales_h_null: rawptr, scales_w_v: f64, scales_w_null: rawptr) ---
	atg__upsample_bilinear2d_aa_backward :: proc(out: ^Tensor, grad_output: Tensor, output_size_data: [^]i64, output_size_len: c.int, input_size_data: [^]i64, input_size_len: c.int, align_corners: c.int, scales_h_v: f64, scales_h_null: rawptr, scales_w_v: f64, scales_w_null: rawptr) ---
	atg__upsample_bilinear2d_aa_backward_grad_input :: proc(out: ^Tensor, grad_input: Tensor, grad_output: Tensor, output_size_data: [^]i64, output_size_len: c.int, input_size_data: [^]i64, input_size_len: c.int, align_corners: c.int, scales_h_v: f64, scales_h_null: rawptr, scales_w_v: f64, scales_w_null: rawptr) ---
	atg__upsample_bilinear2d_aa_out :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int, align_corners: c.int, scales_h_v: f64, scales_h_null: rawptr, scales_w_v: f64, scales_w_null: rawptr) ---
	atg__upsample_bilinear2d_aa_vec :: proc(out: ^Tensor, input: Tensor, output_size_data: [^]i64, output_size_len: c.int, align_corners: c.int, scale_factors_data: [^]f64, scale_factors_len: c.int) ---
	atg__upsample_nearest_exact1d :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int, scales_v: f64, scales_null: rawptr) ---
	atg__upsample_nearest_exact1d_backward :: proc(out: ^Tensor, grad_output: Tensor, output_size_data: [^]i64, output_size_len: c.int, input_size_data: [^]i64, input_size_len: c.int, scales_v: f64, scales_null: rawptr) ---
	atg__upsample_nearest_exact1d_backward_grad_input :: proc(out: ^Tensor, grad_input: Tensor, grad_output: Tensor, output_size_data: [^]i64, output_size_len: c.int, input_size_data: [^]i64, input_size_len: c.int, scales_v: f64, scales_null: rawptr) ---
	atg__upsample_nearest_exact1d_out :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int, scales_v: f64, scales_null: rawptr) ---
	atg__upsample_nearest_exact1d_vec :: proc(out: ^Tensor, input: Tensor, output_size_data: [^]i64, output_size_len: c.int, scale_factors_data: [^]f64, scale_factors_len: c.int) ---
	atg__upsample_nearest_exact2d :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int, scales_h_v: f64, scales_h_null: rawptr, scales_w_v: f64, scales_w_null: rawptr) ---
	atg__upsample_nearest_exact2d_backward :: proc(out: ^Tensor, grad_output: Tensor, output_size_data: [^]i64, output_size_len: c.int, input_size_data: [^]i64, input_size_len: c.int, scales_h_v: f64, scales_h_null: rawptr, scales_w_v: f64, scales_w_null: rawptr) ---
	atg__upsample_nearest_exact2d_backward_grad_input :: proc(out: ^Tensor, grad_input: Tensor, grad_output: Tensor, output_size_data: [^]i64, output_size_len: c.int, input_size_data: [^]i64, input_size_len: c.int, scales_h_v: f64, scales_h_null: rawptr, scales_w_v: f64, scales_w_null: rawptr) ---
	atg__upsample_nearest_exact2d_out :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int, scales_h_v: f64, scales_h_null: rawptr, scales_w_v: f64, scales_w_null: rawptr) ---
	atg__upsample_nearest_exact2d_vec :: proc(out: ^Tensor, input: Tensor, output_size_data: [^]i64, output_size_len: c.int, scale_factors_data: [^]f64, scale_factors_len: c.int) ---
	atg__upsample_nearest_exact3d :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int, scales_d_v: f64, scales_d_null: rawptr, scales_h_v: f64, scales_h_null: rawptr, scales_w_v: f64, scales_w_null: rawptr) ---
	atg__upsample_nearest_exact3d_backward :: proc(out: ^Tensor, grad_output: Tensor, output_size_data: [^]i64, output_size_len: c.int, input_size_data: [^]i64, input_size_len: c.int, scales_d_v: f64, scales_d_null: rawptr, scales_h_v: f64, scales_h_null: rawptr, scales_w_v: f64, scales_w_null: rawptr) ---
	atg__upsample_nearest_exact3d_backward_grad_input :: proc(out: ^Tensor, grad_input: Tensor, grad_output: Tensor, output_size_data: [^]i64, output_size_len: c.int, input_size_data: [^]i64, input_size_len: c.int, scales_d_v: f64, scales_d_null: rawptr, scales_h_v: f64, scales_h_null: rawptr, scales_w_v: f64, scales_w_null: rawptr) ---
	atg__upsample_nearest_exact3d_out :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int, scales_d_v: f64, scales_d_null: rawptr, scales_h_v: f64, scales_h_null: rawptr, scales_w_v: f64, scales_w_null: rawptr) ---
	atg__upsample_nearest_exact3d_vec :: proc(out: ^Tensor, input: Tensor, output_size_data: [^]i64, output_size_len: c.int, scale_factors_data: [^]f64, scale_factors_len: c.int) ---
	atg__validate_compressed_sparse_indices :: proc(is_crow: c.int, compressed_idx: Tensor, plain_idx: Tensor, cdim: i64, dim: i64, nnz: i64) ---
	atg__validate_sparse_bsc_tensor_args :: proc(ccol_indices: Tensor, row_indices: Tensor, values: Tensor, size_data: [^]i64, size_len: c.int, check_pinning: c.int) ---
	atg__validate_sparse_bsr_tensor_args :: proc(crow_indices: Tensor, col_indices: Tensor, values: Tensor, size_data: [^]i64, size_len: c.int, check_pinning: c.int) ---
	atg__validate_sparse_compressed_tensor_args :: proc(compressed_indices: Tensor, plain_indices: Tensor, values: Tensor, size_data: [^]i64, size_len: c.int, layout: rawptr, check_pinning: c.int) ---
	atg__validate_sparse_csc_tensor_args :: proc(ccol_indices: Tensor, row_indices: Tensor, values: Tensor, size_data: [^]i64, size_len: c.int, check_pinning: c.int) ---
	atg__validate_sparse_csr_tensor_args :: proc(crow_indices: Tensor, col_indices: Tensor, values: Tensor, size_data: [^]i64, size_len: c.int, check_pinning: c.int) ---
	atg__values :: proc(out: ^Tensor, self: Tensor) ---
	atg__values_copy :: proc(out: ^Tensor, self: Tensor) ---
	atg__values_copy_out :: proc(out: ^Tensor, self: Tensor) ---
	atg__weight_int4pack_mm :: proc(out: ^Tensor, self: Tensor, mat2: Tensor, qGroupSize: i64, qScaleAndZeros: Tensor) ---
	atg__weight_int4pack_mm_for_cpu :: proc(out: ^Tensor, self: Tensor, mat2: Tensor, qGroupSize: i64, qScaleAndZeros: Tensor) ---
	atg__weight_int4pack_mm_with_scales_and_zeros :: proc(out: ^Tensor, self: Tensor, mat2: Tensor, qGroupSize: i64, qScale: Tensor, qZeros: Tensor) ---
	atg__weight_int8pack_mm :: proc(out: ^Tensor, self: Tensor, mat2: Tensor, scales: Tensor) ---
	atg__weight_norm :: proc(out: ^Tensor, v: Tensor, g: Tensor, dim: i64) ---
	atg__weight_norm_differentiable_backward :: proc(out: ^Tensor, grad_w: Tensor, saved_v: Tensor, saved_g: Tensor, saved_norms: Tensor, dim: i64) ---
	atg__weight_norm_interface :: proc(out: ^Tensor, v: Tensor, g: Tensor, dim: i64) ---
	atg__weight_norm_interface_backward :: proc(out: ^Tensor, grad_w: Tensor, saved_v: Tensor, saved_g: Tensor, saved_norms: Tensor, dim: i64) ---
	atg__weight_norm_interface_backward_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, grad_w: Tensor, saved_v: Tensor, saved_g: Tensor, saved_norms: Tensor, dim: i64) ---
	atg__weight_norm_interface_out :: proc(out: ^Tensor, out0: Tensor, out1: Tensor, v: Tensor, g: Tensor, dim: i64) ---
	atg__wrapped_linear_prepack :: proc(out: ^Tensor, weight: Tensor, weight_scale: Tensor, weight_zero_point: Tensor, bias: Tensor) ---
	atg__wrapped_quantized_linear_prepacked :: proc(out: ^Tensor, input: Tensor, input_scale: Tensor, input_zero_point: Tensor, packed_weight: Tensor, output_scale: Tensor, output_zero_point: Tensor, out_channel: i64) ---
	atg_abs :: proc(out: ^Tensor, self: Tensor) ---
	atg_abs_ :: proc(out: ^Tensor, self: Tensor) ---
	atg_abs_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_absolute :: proc(out: ^Tensor, self: Tensor) ---
	atg_absolute_ :: proc(out: ^Tensor, self: Tensor) ---
	atg_absolute_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_acos :: proc(out: ^Tensor, self: Tensor) ---
	atg_acos_ :: proc(out: ^Tensor, self: Tensor) ---
	atg_acos_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_acosh :: proc(out: ^Tensor, self: Tensor) ---
	atg_acosh_ :: proc(out: ^Tensor, self: Tensor) ---
	atg_acosh_out :: proc(out: ^Tensor, self: Tensor) ---
	atg_adaptive_avg_pool1d :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int) ---
	atg_adaptive_avg_pool1d_out :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int) ---
	atg_adaptive_avg_pool2d :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int) ---
	atg_adaptive_avg_pool2d_out :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int) ---
	atg_adaptive_avg_pool3d :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int) ---
	atg_adaptive_avg_pool3d_backward :: proc(out: ^Tensor, grad_input: Tensor, grad_output: Tensor, self: Tensor) ---
	atg_adaptive_avg_pool3d_out :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int) ---
	atg_adaptive_max_pool1d :: proc(out: ^Tensor, self: Tensor, output_size_data: [^]i64, output_size_len: c.int) ---
